feat: split get ext in two endpoints
Having a single endpoint with two possible types was confusing
for the client library generator.
